syntax = "proto3";

package bot.twitch.subscriptions.v1;

import "google/protobuf/wrappers.proto";
import "types/crud/v1/crud.proto";

message TwitchSubscription {
  string account_id = 1;
  string account_name = 2;
  string account_image = 3;
  google.protobuf.StringValue message = 5;
  google.protobuf.StringValue role = 6;
  google.protobuf.StringValue discord_channel = 7;
}

// CreateTwitchSubscription
message CreateTwitchSubscriptionRequest {
  string account_id = 4;
  string guild_id = 5;
}

message CreateTwitchSubscriptionResponse {
  TwitchSubscription subscription = 1;
}

// UpdateTwitchSubscription
message UpdateTwitchSubscriptionRequest {
  string account_id = 1;
  string guild_id = 2;
  types.crud.v1.OptionalString message = 4;
  types.crud.v1.OptionalString role = 5;
  types.crud.v1.OptionalString discord_channel = 6;
}
  
message UpdateTwitchSubscriptionResponse {
  TwitchSubscription subscription = 1;
}

// DeleteTwitchSubscription
message DeleteTwitchSubscriptionRequest {
  string account_id = 1;
  string guild_id = 2;
}

message DeleteTwitchSubscriptionResponse {
  TwitchSubscription subscription = 1;
}

// GetGuildTwitchSubscriptions
message GetGuildTwitchSubscriptionsRequest {
  string guild_id = 1;
}

message GetGuildTwitchSubscriptionsResponse {
  repeated TwitchSubscription subscriptions = 1;
}

// TwitchSubscriptionService
service TwitchSubscriptionService {
  rpc CreateTwitchSubscription (CreateTwitchSubscriptionRequest) returns (CreateTwitchSubscriptionResponse);
  rpc UpdateTwitchSubscription (UpdateTwitchSubscriptionRequest) returns (UpdateTwitchSubscriptionResponse);
  rpc DeleteTwitchSubscription (DeleteTwitchSubscriptionRequest) returns (DeleteTwitchSubscriptionResponse);
  rpc GetGuildTwitchSubscriptions (GetGuildTwitchSubscriptionsRequest) returns (GetGuildTwitchSubscriptionsResponse);
}
